added tests and test script

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,4 +25,4 @@ jobs:
     #   run: go build main.go -v ./...
 
     - name: Test
-      run: go test test/imgproc_test.go -v ./...
+      run: test/script.sh
