--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,4 +32,11 @@ jobs:
             - Second Change
           draft: true
           prerelease: true
-        
+      - name: Upload Release Assets
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./imgproc-linux-x86
+          asset_name: imgproc-linux-x86
+          asset_content_type: binary
+          
