--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,8 @@ name: Build Go CLI
 
 on:
   push:
-    branches:
-      - '*'
-  pull_request:
-    branches:
-      - '*'
+    tags:
+      - 'v*.*.*'
   
 env:
   name: imgproc
@@ -38,4 +35,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: imgproc-binaries
-        path: ./imgproc-linux-x86
+        path: build/imgproc-linux-x86
