--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,11 @@ name: Build Go CLI
 
 on:
   push:
-    tags:
-      - 'v*.*.*'
+    branches:
+      - '*'
+  pull_request:
+    branches:
+      - '*'
   
 env:
   name: imgproc
