fixed: upload artifcat path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,4 +38,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: imgproc-binaries
-        path: build/imgproc-linux-x86
+        path: ./imgproc-linux-x86
