--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/imgproc-linux-x86
+          asset_path: imgproc-binaries.zip
           asset_name: imgproc-linux-x86
-          asset_content_type: binary
+          asset_content_type: application/zip
           
