--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,8 @@ jobs:
       - name: List Downloaded Files
         run: ls -R ./
 
+      - run: zip -r imgproc-binaries.zip build/
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -77,7 +79,7 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/imgproc-binaries.zip
+          asset_path: imgproc-binaries.zip
           asset_name: imgproc-binaries.zip
           asset_content_type: application/zip
           
