--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,28 +1,23 @@
-name: test
+name: Test
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push, pull_request]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.22'
-    
-    - name: install dependencies
-      run: go get .
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.22"
 
-    # - name: Build
-    #   run: go build main.go -v ./...
+      - name: install dependencies
+        run: go get .
 
-    - name: Test
-      run: test/script.sh
+      # - name: Build
+      #   run: go build main.go -v ./...
+
+      - name: Test
+        run: test/script.sh
