updated test triggers for all branches

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,11 +6,11 @@ on:
       - "v*"
 
 jobs:
-  tests:
+  test:
     uses: ./.github/workflows/test.yml
 
   build:
-    needs: tests
+    needs: test
 
     runs-on: ubuntu-latest
     strategy:
